FCL-503 | fix atom feed alignment css

--- a/ds_judgements_public_ui/sass/includes/_result_controls.scss
+++ b/ds_judgements_public_ui/sass/includes/_result_controls.scss
@@ -36,14 +36,17 @@
 
     width: auto;
     min-width: auto;
+    max-height: 32px;
     margin: 0;
-    padding-right: $space-6;
+    padding: $space-1 $space-6 $space-1 $space-2;
+
+    font-size: $typography-sm-text-size;
   }
 
   &__button {
     @include call-to-action-button;
 
-    max-height: 34px;
+    max-height: 32px;
     margin: 0;
     padding: $space-2 $space-3;
 
